--- a/portfolio.html
+++ b/portfolio.html
@@ -124,10 +124,10 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="w1.png" alt="First slide">
+                <img class="d-block w-100" src="W1.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="w2.png" alt="Second slide">
+                <img class="d-block w-100" src="W2.png" alt="Second slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="W3.png" alt="Third slide">
