--- a/portfolio.html
+++ b/portfolio.html
@@ -136,10 +136,10 @@
                 <img class="d-block w-100" src="W4.png" alt="Fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="W5.png" alt="Fifth slide">
+                <img class="d-block w-100" src="w5.png" alt="Fifth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="W6.png" alt="Sixth slide">
+                <img class="d-block w-100" src="w6.png" alt="Sixth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
